fix: исправить все в соответствии с комментариями ревьюера